--- a/customer.html
+++ b/customer.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/styles2.css">
     
     <style>
+      body {font-family: Arial, Helvetica, sans-serif;}
+* {box-sizing: border-box;}
 /* The popup form - hidden by default */
 .form-popup {
   display: none;
