--- a/customer.html
+++ b/customer.html
@@ -103,6 +103,15 @@
           <p class="covid-text">Protect yourself and others from COVID-19.</p>
         </div>
       </div>
+      <script>
+function openForm() {
+  document.getElementById("myForm").style.display = "block";
+}
+
+function closeForm() {
+  document.getElementById("myForm").style.display = "none";
+}
+</script>
 
 
 
