--- a/customer.html
+++ b/customer.html
@@ -12,8 +12,8 @@
 .form-popup {
   display: none;
   position: fixed;
-  bottom: 0;
-  right: 15px;
+  bottom: 100px;
+  right: 800px;
   border: 3px solid #f1f1f1;
   z-index: 9;
 }
