--- a/customer.html
+++ b/customer.html
@@ -87,13 +87,13 @@
           <div class="form-popup" id="myForm">
            <form action="action.php" class="form-container">
   
-              <label for="email"><b>Username</b></label>
+              <label for="email"><b>Email id</b></label>
               <input type="text" placeholder="Enter Email" name="email" required>
 
               <label for="psw"><b>amount</b></label>
               <input type="password" placeholder="Enter Password" name="psw" required>
 
-              <button type="submit" class="btn">Login</button>
+              <button type="submit" class="btn">Transfer</button>
               <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
             </form>
         </div>
