--- a/customer.html
+++ b/customer.html
@@ -90,8 +90,8 @@
               <label for="email"><b>Email id</b></label>
               <input type="text" placeholder="Enter Email" name="email" required>
 
-              <label for="psw"><b>amount</b></label>
-              <input type="password" placeholder="Enter Amount" name="psw" required>
+              <label for="amount"><b>amount</b></label>
+              <input type="number" placeholder="Enter Amount" name="amount" required>
 
               <button type="submit" class="btn">Transfer</button>
               <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
