--- a/customer.html
+++ b/customer.html
@@ -91,7 +91,7 @@
               <input type="text" placeholder="Enter Email" name="email" required>
 
               <label for="amount"><b>amount</b></label>
-              <input type="number" placeholder="Enter Amount" name="amount" required>
+              <input type="text" placeholder="Enter Amount" name="amount" required>
 
               <button type="submit" class="btn">Transfer</button>
               <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
