--- a/customer.html
+++ b/customer.html
@@ -1,62 +1,114 @@
+<?php
+    include("response.php");
+    $newObj = new Employee();
+    $emps = $newObj->getEmployees();
+ ?>
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Basic banking system-customers</title>
-    <link rel="stylesheet" href="css/styles2.css">
-   
-    <!-- icon -->
-    <link rel="icon" href="icon.png">
 
-    <!-- bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+<head>
+  <meta charset="utf-8">
+  <title>Basic banking system-customers</title>
+  <link rel="stylesheet" href="css/styles2.css">
 
-    <!-- Font-awesome -->
-    <script src="https://use.fontawesome.com/07d62e5a9f.js"></script>
+  <!-- icon -->
+  <link rel="icon" href="icon.png">
 
-  </head>
-  <body>
+  <!-- bootstrap -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
 
-    <section id="title">
-      <div class="row">
-        <div class="col-lg-6">
-          <a href="homepage.html"><img src="images/logo.png" alt=""></a>
-          <h1>Customers</h1>
-          <a href="homepage.html"><button type="button"  class="btn btn-dark btn-lg download-button"><i class="fa fa-home" aria-hidden="true"></i> Home</button></a>
-          <button type="button" class="btn btn-outline-dark btn-lg download-button" onclick="openForm()"><i class="fa fa-money" aria-hidden="true"></i> Transfer Money</button>
-          <div class="form-popup" id="myForm">
-           <form action="action.php" class="form-container">
-  
-              <label for="email"><b>Email id</b></label>
-              <input type="text" placeholder="Enter Email" name="email" required>
+  <!-- Font-awesome -->
+  <script src="https://use.fontawesome.com/07d62e5a9f.js"></script>
 
-              <label for="amount"><b>amount</b></label>
-              <input type="text" placeholder="Enter Amount" name="amount" required>
+</head>
 
-              <button type="submit" class="btn">Transfer</button>
-              <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
-            </form>
-        </div>
-        </div>
-        <div class="col-lg-6">
-          <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public"><img src="images/cus-back.jpg" class="title-image" alt="customer-satisfaction" width="100%"></a>
-          <p class="covid-text">Protect yourself and others from COVID-19.</p>
+<body>
+
+  <!-- First-section -->
+  <section id="title">
+    <div class="row">
+      <div class="col-lg-6">
+        <a href="homepage.html"><img src="images/logo.png" alt=""></a>
+        <h1>Customers</h1>
+        <a href="homepage.html"><button type="button" class="btn btn-dark btn-lg download-button"><i class="fa fa-home" aria-hidden="true"></i> Home</button></a>
+        <button type="button" class="btn btn-outline-dark btn-lg download-button" onclick="openForm()"><i class="fa fa-money" aria-hidden="true"></i> Transfer Money</button>
+        <div class="form-popup" id="myForm">
+          <form action="action.php" class="form-container">
+
+            <label for="email"><b>Email id</b></label>
+            <input type="text" placeholder="Enter Email" name="email" required>
+
+            <label for="amount"><b>amount</b></label>
+            <input type="text" placeholder="Enter Amount" name="amount" required>
+
+            <button type="submit" class="btn">Transfer</button>
+            <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+          </form>
         </div>
       </div>
-      <script>
-        function openForm() {
+      <div class="col-lg-6">
+        <a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public"><img src="images/cus-back.jpg" class="title-image" alt="customer-satisfaction" width="100%"></a>
+        <p class="covid-text">Protect yourself and others from COVID-19.</p>
+      </div>
+    </div>
+    <script>
+      function openForm() {
         document.getElementById("myForm").style.display = "block";
-        }
+      }
 
-        function closeForm() {
+      function closeForm() {
         document.getElementById("myForm").style.display = "none";
-        }
-      </script>
+      }
+    </script>
 
 
+  </section>
+
+
+  <!-- Second section for customer table -->
+  <section id="customer-table">
+    <h1>Information of our customers</h1>
+    <table id="employee_grid" class="table" width="100%" cellspacing="0">
+	    <thead>
+		    <tr>
+			    <th>Name</th>
+			    <th>Email</th>
+			    <th>balance</th>
+		    </tr>
+	    </thead>
+	    <tbody>
+		    <?php foreach($emps as $key => $emp) :?>
+		    <tr>
+			    <td><?php echo $emp['username'] ?></td>
+			    <td><?php echo $emp['email'] ?></td>
+			    <td><?php echo $emp['amount'] ?></td>
+		  	</tr>
+	      <?php endforeach;?>
+	    </tbody>
+    </table>
+  </section>
+
+
+    <!-- Call to Action -->
+
+    <section id="cta" class="coloured-section">
+      <h3 class="main-text">Basic Banking system project of Internship,for THE SPARKS FOUNDATION by Kundan Kumar.</h3>
+      <a href="customer.html"><button type="button" class="btn btn-dark btn-lg download-button"></i> Get started</button></a>
     </section>
 
-  </body>
+
+    <!-- Footer -->
+
+    <footer id="footer" class="white-section">
+      <i class="social-icon fa fa-twitter" aria-hidden="true"></i>
+      <i class="social-icon fa fa-facebook-square" aria-hidden="true"></i>
+      <i class="social-icon fa fa-instagram" aria-hidden="true"></i>
+      <i class="social-icon fa fa-envelope" aria-hidden="true"></i>
+      <p>© Copyright 2020 Candy Bank.</p>
+    </footer>
+
+</body>
+
 </html>
