--- a/customer.html
+++ b/customer.html
@@ -1,7 +1,6 @@
 <?php
     include("response.php");
-    $newObj = new Employee();
-    $emps = $newObj->getEmployees();
+    $emps = getEmployees();
  ?>
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
