--- a/customer.html
+++ b/customer.html
@@ -78,11 +78,11 @@
 		    </tr>
 	    </thead>
 	    <tbody>
-		    <?php foreach($emps as $key => $emp); ?>
+		    <?php foreach($emps as $key); ?>
 		    <tr>
-			    <td><?php echo $emp['username'] ?></td>
-			    <td><?php echo $emp['email'] ?></td>
-			    <td><?php echo $emp['amount'] ?></td>
+			    <td><?php echo $key['username'] ?></td>
+			    <td><?php echo $key['email'] ?></td>
+			    <td><?php echo $key['amount'] ?></td>
 		  	</tr>}
 	      <?php endforeach; ?>
 	    </tbody>
