--- a/customer.html
+++ b/customer.html
@@ -80,10 +80,10 @@
 	    <tbody>
 		    <?php foreach($emps as $key); ?>
 		    <tr>
-			    <td><?php echo $key['username'] ?></td>
-			    <td><?php echo $key['email'] ?></td>
-			    <td><?php echo $key['amount'] ?></td>
-		  	</tr>}
+			    <td><?php echo $key[username] ?></td>
+			    <td><?php echo $key[email] ?></td>
+			    <td><?php echo $key[current_balance] ?></td>
+		  	</tr>
 	      <?php endforeach; ?>
 	    </tbody>
     </table>
