--- a/customer.html
+++ b/customer.html
@@ -80,9 +80,9 @@
 	    <tbody>
 		    <?php foreach($emps as $key); ?>
 		    <tr>
-			    <td><?php echo $key[username] ?></td>
-			    <td><?php echo $key[email] ?></td>
-			    <td><?php echo $key[current_balance] ?></td>
+			    <td><?php echo $key['username'] ?></td>
+			    <td><?php echo $key['email'] ?></td>
+			    <td><?php echo $key['current_balance'] ?></td>
 		  	</tr>
 	      <?php endforeach; ?>
 	    </tbody>
