--- a/customer.html
+++ b/customer.html
@@ -74,7 +74,7 @@
 		    <tr>
 			    <th>Name</th>
 			    <th>Email</th>
-			    <th>balance</th>
+			    <th>Balance</th>
 		    </tr>
 	    </thead>
 	    <tbody>
