--- a/customer.html
+++ b/customer.html
@@ -82,9 +82,9 @@
 		foreach($emps as $key)
 		{
 		    	echo "<tr>";
-			    echo "<td>" $key['username']"</td>";
-			    echo "<td>" $key['email']"</td>";
-			    echo "<td>" $key['current_balance'] "</td>";
+			    echo "<td>" .$key['username']."</td>";
+			    echo "<td>" .$key['email']."</td>";
+			    echo "<td>". $key['current_balance'] ."</td>";
 		  	echo "</tr>";
 		}
 	      ?>
