--- a/customer.html
+++ b/customer.html
@@ -76,7 +76,7 @@
 	    </thead>
 	    <tbody>
 		    <?php  
-			include("response.php");
+			include('response.php');
    		 	$emps = getEmployees();
 
 		foreach($emps as $key)
