--- a/customer.html
+++ b/customer.html
@@ -81,11 +81,11 @@
 
 		foreach($emps as $key)
 		{
-		    	echo "<tr>";
-			    echo "<td>" .$key['username']."</td>";
-			    echo "<td>" .$key['email']."</td>";
-			    echo "<td>". $key['current_balance'] ."</td>";
-		  	echo "</tr>";
+		    	echo '<tr>';
+			    echo '<td>' .$key['username']. '</td>';
+			    echo '<td>' .$key['email'] '</td>';
+			    echo 'td>' .$key['current_balance']. '</td>';
+		  	echo '</tr>';
 		}
 	      ?>
 	    </tbody>
