--- a/customer.html
+++ b/customer.html
@@ -27,7 +27,7 @@
     <div class="row">
       <div class="col-lg-6">
         <a href="homepage.html"><img src="images/logo.png" alt=""></a>
-        <h1>Customers</h1>
+        <h1 class="main-text">Customers</h1>
         <a href="homepage.html"><button type="button" class="btn btn-dark btn-lg download-button"><i class="fa fa-home" aria-hidden="true"></i> Home</button></a>
         <button type="button" class="btn btn-outline-dark btn-lg download-button" onclick="openForm()"><i class="fa fa-money" aria-hidden="true"></i> Transfer Money</button>
         <div class="form-popup" id="myForm">
