--- a/customer.html
+++ b/customer.html
@@ -31,7 +31,7 @@
         <a href="homepage.html"><button type="button" class="btn btn-dark btn-lg download-button"><i class="fa fa-home" aria-hidden="true"></i> Home</button></a>
         <button type="button" class="btn btn-outline-dark btn-lg download-button" onclick="openForm()"><i class="fa fa-money" aria-hidden="true"></i> Transfer Money</button>
         <div class="form-popup" id="myForm">
-          <form action="action.php" class="form-container">
+          <form action="response.php" class="form-container">
 
             <label for="email"><b>Email id</b></label>
             <input type="text" placeholder="Enter Email" name="email" required>
