--- a/homepage.html
+++ b/homepage.html
@@ -32,7 +32,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-dark ">
 
-        <img class="navbar-brand rounded-sm logo" src="images/logo.png" alt="my-logo" height="150" width="150">
+        <img class="navbar-brand rounded-sm logo" src="images/logo.png" alt="my-logo">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
