--- a/customer.html
+++ b/customer.html
@@ -79,12 +79,16 @@
    			$dbname      = "dbname = d8h0u8kh19dh36";
    			$credentials = "user = qownjuhbawznbz password=368dd7b964487933e40c9d030fd89399ae054c69a15b3f210ad7eea2917bebde";
    			$db = pg_connect( "$host $port $dbname $credentials"  );
-			$sql = "SELECT * FROM customers";
-			$result = pg_query($db,$sql);
-			echo "<table>"; 
-			while($row = pg_fetch_row($result)) 
-				{ echo "<tr><td>"; echo"$row[0]"; echo"</td><td>"; echo"$row[1]"; echo"</td><td>"; echo"$row[2]"; echo"</td></tr>"; }
-			echo "</table>"; 
+			$query = "SELECT * FROM customers"; 	
+
+$rs = pg_query($db, $query);	
+if(!$rs)	
+{ echo "failed";}	
+echo "<table>";	
+while ($row = pg_fetch_row($rs)) { 	
+  echo "<tr><td>"; echo "$row[0]"; echo "</td> <td>"; echo "$row[1]"; echo "</td> <td>"; echo"$row[2]"; echo"</td></tr>";	
+}echo "</table>";	
+
 			pg_close($db);
 			?>
     </table>
