--- a/customer.html
+++ b/customer.html
@@ -71,7 +71,7 @@
 			    <th>Name</th>
 			    <th>Email</th>
 			    <th>balance</th>
-		    </tr>
+		    </tr> </table></section>
 	    
 		    	<?php
 			$host        = "host = ec2-52-73-199-211.compute-1.amazonaws.com";
@@ -91,8 +91,8 @@ while ($row = pg_fetch_row($rs)) {
 
 			pg_close($db);
 			?>
-    </table>
-  </section>
+   
+ 
 
 
     <!-- Call to Action -->
