--- a/customer.html
+++ b/customer.html
@@ -73,13 +73,15 @@
 			    <th>balance</th>
 		    </tr> </table></section>
 	    
-		    	<?php
-			$host        = "host = ec2-52-73-199-211.compute-1.amazonaws.com";
-   			$port        = "port = 5432";
-   			$dbname      = "dbname = d8h0u8kh19dh36";
-   			$credentials = "user = qownjuhbawznbz password=368dd7b964487933e40c9d030fd89399ae054c69a15b3f210ad7eea2917bebde";
-   			$db = pg_connect( "$host $port $dbname $credentials"  );
-			$query = "SELECT * FROM customers"; 	
+		    	<?php	
+$host        = "host = ec2-54-224-175-142.compute-1.amazonaws.com";	
+   $port        = "port = 5432";	
+   $dbname      = "dbname = dcjrfn9ert59om";	
+   $credentials = "user = tgfotlqsesxkop password= 8347981a2330af6e15c433302db79ab3d9ba7f7f32cd25dbabd0dff7e78f6276 ";	
+
+   $db = pg_connect( "$host $port $dbname $credentials"  );	
+
+$query = "SELECT * FROM logind"; 	
 
 $rs = pg_query($db, $query);	
 if(!$rs)	
@@ -88,10 +90,9 @@ echo "<table>";
 while ($row = pg_fetch_row($rs)) { 	
   echo "<tr><td>"; echo "$row[0]"; echo "</td> <td>"; echo "$row[1]"; echo "</td> <td>"; echo"$row[2]"; echo"</td></tr>";	
 }echo "</table>";	
+   pg_close($db);	
 
-			pg_close($db);
-			?>
-   
+?>
  
 
 
