--- a/customer.html
+++ b/customer.html
@@ -33,10 +33,14 @@
         <div class="form-popup" id="myForm">
           <form action="response.php" method="post" class="form-container">
 
-            <label for="email"><b>Email id</b></label>
-            <input id= "email" type="text" placeholder="Enter Email" name="email" required>
+            <label for="email"><b>Transfer from:</b></label>
+            <input id= "email" type="text" placeholder="Enter Email" name="emailfrom" required>
+            
+            <label for="email"><b>Transfer To:</b></label>
+            <input id= "email" type="text" placeholder="Enter Email" name="emailto" required>
 
-            <label for="amount"><b>amount</b></label>
+
+            <label for="amount"><b>Amount:</b></label>
             <input id="amount" type="text" placeholder="Enter Amount" name="amount" required>
 
             <button type="submit" class="btn">Transfer</button>
