--- a/homepage.html
+++ b/homepage.html
@@ -56,7 +56,7 @@
         <div class="col-lg-6 First-sec">
           <h1 class="main-text">Welcome to Candy Bank.</h1>
           <p>Now transfer money easily.</p>
-          <a href="customer.html"><button type="button" class="btn btn-outline-dark btn-lg">Get Started</button></a>
+          <a href="customer.php"><button type="button" class="btn btn-outline-dark btn-lg">Get Started</button></a>
 
         </div>
         <div class="col-lg-6 ">
@@ -117,7 +117,7 @@
   <section id="cta" class="coloured-section">
 
     <h3 class="main-text">Basic Banking system project of Internship,for THE SPARKS FOUNDATION by Kundan Kumar.</h3>
-    <a href="customer.html"><button type="button" class="btn btn-dark btn-lg download-button"></i> Get started</button></a>
+    <a href="customer.php"><button type="button" class="btn btn-dark btn-lg download-button"></i> Get started</button></a>
 
 
   </section>
